pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-name-collision.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /dash
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my.ingress
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /dot
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
